Changes in 1.0.19:
  o Client Changes:
    * The default resolveLevel setting is now 2, this means that
      conary will try to update troves that would otherwise cause an
      update to fail.  See the conary man page for more details.
    * Multiple bugs have been fixed in interactive prompting for user
      passwords (CNY-466):
      o Password prompts are based on the server name portion of the
        label being accessed, not the actual hostname of the server
        (these are often different when repositoryMaps are used).
      o When no password callback is available, the operation will
        fail with an open error (which is identical to what would
        happen if no user name was present) instead of giving a
        traceback.
      o The download thread uses the passwords which the original
        thread obtained from the user.
      o The download thread is able to prompt for passwords from the
        user if distributed changesets require access to additional
        repositories.

  o Build Changes:
    * "r.Ant()", "r.JavaCompile()", and "r.ClassPath()" build actions
      have been added to support building java with conary.
    * "r.addPatch()" will now determine the patchlevel without users
      needing to add level= in the r.addPatch() call. The level
      parameter is still honored, but should not be needed.
    * "cvc cook --show-buildreqs" now displays build requirements
      inherited from parent recipe classes. (CNY-520)
    * The output of "cvc diff" and "cvc rdiff" can now be used as an
      input to patch when files are added between two versions. (CNY-424)
    * Use flags have been added for dom0 and domU.  They default to
      "sense prefernot".  The domU flag should be used to build
      binaries specific to Xen domU environments where special
      provisions are made for paravirtualization.  The dom0 flag
      should be used to build binaries specific to Xen dom0